# codever

backend-fastapi/: pyproject.toml
backend-fastapi/src/: app.py
backend-fastapi/src/models/: snippet.py  user.py
backend-fastapi/src/routers/: __init__.py  public.py  user.py  utils.py
frontend/src/app/: app.component.ts  app.routing.ts
frontend/src/app/core/: core.module.ts  personal-snippets.service.ts  user-data.service.ts
frontend/src/app/core/admin/: admin.service.ts
frontend/src/app/core/cache/: local-storage.service.ts  system.service.ts
frontend/src/app/core/model/: localstorage.cache-keys.ts  rate-snippet.request.ts  search-domain.enum.ts  search-domains-map.ts
frontend/src/app/core/user/: add-to-history.service.ts  feed-store.service.ts  my-snippets.store.ts  notify-stores.service.ts  suggested-tags.store.ts  userdata.favorites.store.ts  userdata.history.store.ts  userdata.pinned.store.ts  userdata.readlater.store.ts  userdata.store.ts  userdata.watched-tags.store.ts
frontend/src/app/my-snippets/delete-snippet-dialog/: delete-snippet-dialog.component.ts
frontend/src/app/new-entry/: new-entry.component.html  new-entry.component.ts
frontend/src/app/public/: public-routing.module.ts  public.module.ts
frontend/src/app/public/feedback/: feedback.service.ts
frontend/src/app/public/howto/: howto-routing.module.ts  howto.component.html  howto.module.ts
frontend/src/app/search-results/: search-results.component.html  search-results.component.ts
frontend/src/app/shared/: shared.module.ts
(+30 files in other folders)
